--- a/helm-repositories/gitlab/gitlab-repo.yaml
+++ b/helm-repositories/gitlab/gitlab-repo.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: lacework.github.io
+  name: charts.gitlab.io
   namespace: ${releaseNamespace}
 spec:
   interval: 10m
   timeout: 1m
-  url: "${helmMirrorURL:=https://lacework.github.io/helm-charts/}"
+  url: "${helmMirrorURL:=https://charts.gitlab.io}"
