updated bigbang to 2.8.0

--- a/services/bigbang-super/metadata.yaml
+++ b/services/bigbang-super/metadata.yaml
@@ -1,4 +1,4 @@
-displayName: Platform1 BigBanng
+displayName: Platform1 BigBang
 description: |-
   #Big Bang is a set of applcations to Deliver DEvSecOps Architecture Components
   gitlab
